--- a/index.ipynb
+++ b/index.ipynb
@@ -32,12 +32,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries\n"
+    "# Import necessary libraries\n",
+    "import pandas as pd\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
