--- a/index.ipynb
+++ b/index.ipynb
@@ -136,29 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['1949-01-01', '1949-02-01', '1949-03-01', '1949-04-01',\n",
-       "               '1949-05-01', '1949-06-01', '1949-07-01', '1949-08-01',\n",
-       "               '1949-09-01', '1949-10-01',\n",
-       "               ...\n",
-       "               '1960-03-01', '1960-04-01', '1960-05-01', '1960-06-01',\n",
-       "               '1960-07-01', '1960-08-01', '1960-09-01', '1960-10-01',\n",
-       "               '1960-11-01', '1960-12-01'],\n",
-       "              dtype='datetime64[ns]', name='Month', length=144, freq=None)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-7-ace26f12565b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-ace26f12565b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    pd.DatetimeIndex(pd.to_datetime(raw.Month)\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
-    "pd.DatetimeIndex(raw.Month)"
+    "pd.DatetimeIndex(pd.to_datetime(raw.Month)"
    ]
   },
   {
