Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "pd.DatetimeIndex(raw.Month)"
+    "raw.reset_indexpd.DatetimeIndex(raw.Month)"
    ]
   },
   {
