--- a/index.ipynb
+++ b/index.ipynb
@@ -145,352 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Month</th>\n",
-       "      <th>#Passengers</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1949-01-01</th>\n",
-       "      <td>1949-01-01</td>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-02-01</th>\n",
-       "      <td>1949-02-01</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-03-01</th>\n",
-       "      <td>1949-03-01</td>\n",
-       "      <td>132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-04-01</th>\n",
-       "      <td>1949-04-01</td>\n",
-       "      <td>129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-05-01</th>\n",
-       "      <td>1949-05-01</td>\n",
-       "      <td>121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-06-01</th>\n",
-       "      <td>1949-06-01</td>\n",
-       "      <td>135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-07-01</th>\n",
-       "      <td>1949-07-01</td>\n",
-       "      <td>148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-08-01</th>\n",
-       "      <td>1949-08-01</td>\n",
-       "      <td>148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-09-01</th>\n",
-       "      <td>1949-09-01</td>\n",
-       "      <td>136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-10-01</th>\n",
-       "      <td>1949-10-01</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-11-01</th>\n",
-       "      <td>1949-11-01</td>\n",
-       "      <td>104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1949-12-01</th>\n",
-       "      <td>1949-12-01</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-01-01</th>\n",
-       "      <td>1950-01-01</td>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-02-01</th>\n",
-       "      <td>1950-02-01</td>\n",
-       "      <td>126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-03-01</th>\n",
-       "      <td>1950-03-01</td>\n",
-       "      <td>141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-04-01</th>\n",
-       "      <td>1950-04-01</td>\n",
-       "      <td>135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-05-01</th>\n",
-       "      <td>1950-05-01</td>\n",
-       "      <td>125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-06-01</th>\n",
-       "      <td>1950-06-01</td>\n",
-       "      <td>149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-07-01</th>\n",
-       "      <td>1950-07-01</td>\n",
-       "      <td>170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-08-01</th>\n",
-       "      <td>1950-08-01</td>\n",
-       "      <td>170</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-09-01</th>\n",
-       "      <td>1950-09-01</td>\n",
-       "      <td>158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-10-01</th>\n",
-       "      <td>1950-10-01</td>\n",
-       "      <td>133</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-11-01</th>\n",
-       "      <td>1950-11-01</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1950-12-01</th>\n",
-       "      <td>1950-12-01</td>\n",
-       "      <td>140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1951-01-01</th>\n",
-       "      <td>1951-01-01</td>\n",
-       "      <td>145</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1951-02-01</th>\n",
-       "      <td>1951-02-01</td>\n",
-       "      <td>150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1951-03-01</th>\n",
-       "      <td>1951-03-01</td>\n",
-       "      <td>178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1951-04-01</th>\n",
-       "      <td>1951-04-01</td>\n",
-       "      <td>163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1951-05-01</th>\n",
-       "      <td>1951-05-01</td>\n",
-       "      <td>172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1951-06-01</th>\n",
-       "      <td>1951-06-01</td>\n",
-       "      <td>178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-07-01</th>\n",
-       "      <td>1958-07-01</td>\n",
-       "      <td>491</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-08-01</th>\n",
-       "      <td>1958-08-01</td>\n",
-       "      <td>505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-09-01</th>\n",
-       "      <td>1958-09-01</td>\n",
-       "      <td>404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-10-01</th>\n",
-       "      <td>1958-10-01</td>\n",
-       "      <td>359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-11-01</th>\n",
-       "      <td>1958-11-01</td>\n",
-       "      <td>310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1958-12-01</th>\n",
-       "      <td>1958-12-01</td>\n",
-       "      <td>337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-01-01</th>\n",
-       "      <td>1959-01-01</td>\n",
-       "      <td>360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-02-01</th>\n",
-       "      <td>1959-02-01</td>\n",
-       "      <td>342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-03-01</th>\n",
-       "      <td>1959-03-01</td>\n",
-       "      <td>406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-04-01</th>\n",
-       "      <td>1959-04-01</td>\n",
-       "      <td>396</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-05-01</th>\n",
-       "      <td>1959-05-01</td>\n",
-       "      <td>420</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-06-01</th>\n",
-       "      <td>1959-06-01</td>\n",
-       "      <td>472</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-07-01</th>\n",
-       "      <td>1959-07-01</td>\n",
-       "      <td>548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-08-01</th>\n",
-       "      <td>1959-08-01</td>\n",
-       "      <td>559</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-09-01</th>\n",
-       "      <td>1959-09-01</td>\n",
-       "      <td>463</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-10-01</th>\n",
-       "      <td>1959-10-01</td>\n",
-       "      <td>407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-11-01</th>\n",
-       "      <td>1959-11-01</td>\n",
-       "      <td>362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1959-12-01</th>\n",
-       "      <td>1959-12-01</td>\n",
-       "      <td>405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-01-01</th>\n",
-       "      <td>1960-01-01</td>\n",
-       "      <td>417</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-02-01</th>\n",
-       "      <td>1960-02-01</td>\n",
-       "      <td>391</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-03-01</th>\n",
-       "      <td>1960-03-01</td>\n",
-       "      <td>419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-04-01</th>\n",
-       "      <td>1960-04-01</td>\n",
-       "      <td>461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-05-01</th>\n",
-       "      <td>1960-05-01</td>\n",
-       "      <td>472</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-06-01</th>\n",
-       "      <td>1960-06-01</td>\n",
-       "      <td>535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-07-01</th>\n",
-       "      <td>1960-07-01</td>\n",
-       "      <td>622</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-08-01</th>\n",
-       "      <td>1960-08-01</td>\n",
-       "      <td>606</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-09-01</th>\n",
-       "      <td>1960-09-01</td>\n",
-       "      <td>508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-10-01</th>\n",
-       "      <td>1960-10-01</td>\n",
-       "      <td>461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-11-01</th>\n",
-       "      <td>1960-11-01</td>\n",
-       "      <td>390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1960-12-01</th>\n",
-       "      <td>1960-12-01</td>\n",
-       "      <td>432</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>144 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 Month  #Passengers\n",
+       "<bound method DataFrame.info of                  Month  #Passengers\n",
        "Month                              \n",
        "1949-01-01  1949-01-01          112\n",
        "1949-02-01  1949-02-01          118\n",
@@ -554,16 +215,16 @@
        "1960-11-01  1960-11-01          390\n",
        "1960-12-01  1960-12-01          432\n",
        "\n",
-       "[144 rows x 2 columns]"
+       "[144 rows x 2 columns]>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw"
+    "raw.info"
    ]
   },
   {
