Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw.index = pd.DatetimeIndex(raw.Month)"
+    "raw.index = pd.DatetimeIndex(raw.Month)\n",
+    "raw.drop(colu)"
    ]
   },
   {
