Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,17 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "raw.index = pd.DatetimeIndex(raw.Month)\n",
-    "raw.drop(colu)"
+    "raw.drop(columns='Month',inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -155,17 +155,23 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "DatetimeIndex: 144 entries, 1949-01-01 to 1960-12-01\n",
-      "Data columns (total 2 columns):\n",
-      "Month          144 non-null object\n",
+      "Data columns (total 1 columns):\n",
       "#Passengers    144 non-null int64\n",
-      "dtypes: int64(1), object(1)\n",
-      "memory usage: 3.4+ KB\n"
+      "dtypes: int64(1)\n",
+      "memory usage: 2.2 KB\n"
      ]
     }
    ],
    "source": [
     "raw.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
