Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,11 +319,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mat"
+    "plt.()"
    ]
   },
   {
