--- a/index.ipynb
+++ b/index.ipynb
@@ -389,7 +389,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Determine rolling statistics\n"
+    "#Determine rolling statistics\n",
+    "raw.rolling()"
    ]
   },
   {
