Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,12 +385,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rolling [window=12,center=False,axis=0]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Determine rolling statistics\n",
-    "raw.rolling()"
+    "raw.rolling(window=12)"
    ]
   },
   {
