Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,7 +401,8 @@
    ],
    "source": [
     "#Determine rolling statistics\n",
-    "raw.rolling(window=12)"
+    "rolmean = raw.rolling(window = 12, center = False).mean()\n",
+    "rolstd = raw.rolling(window = 12, center = False).std()"
    ]
   },
   {
