--- a/index.ipynb
+++ b/index.ipynb
@@ -385,25 +385,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rolling [window=12,center=False,axis=0]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Determine rolling statistics\n",
     "rolmean = raw.rolling(window = 12, center = False).mean()\n",
     "rolstd = raw.rolling(window = 12, center = False).std()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            #Passengers\n",
+      "Month                  \n",
+      "1949-01-01          NaN\n",
+      "1949-02-01          NaN\n",
+      "1949-03-01          NaN\n",
+      "1949-04-01          NaN\n",
+      "1949-05-01          NaN\n",
+      "1949-06-01          NaN\n",
+      "1949-07-01          NaN\n",
+      "1949-08-01          NaN\n",
+      "1949-09-01          NaN\n",
+      "1949-10-01          NaN\n",
+      "1949-11-01          NaN\n",
+      "1949-12-01   126.666667\n",
+      "1950-01-01   126.916667\n",
+      "1950-02-01   127.583333\n",
+      "1950-03-01   128.333333\n",
+      "1950-04-01   128.833333\n",
+      "1950-05-01   129.166667\n",
+      "1950-06-01   130.333333\n",
+      "1950-07-01   132.166667\n",
+      "1950-08-01   134.000000\n",
+      "1950-09-01   135.833333\n",
+      "1950-10-01   137.000000\n",
+      "1950-11-01   137.833333\n",
+      "1950-12-01   139.666667\n",
+      "1951-01-01   142.166667\n",
+      "1951-02-01   144.166667\n",
+      "1951-03-01   147.250000\n",
+      "1951-04-01   149.583333\n",
+      "1951-05-01   153.500000\n",
+      "1951-06-01   155.916667\n",
+      "...                 ...\n",
+      "1958-07-01   376.333333\n",
+      "1958-08-01   379.500000\n",
+      "1958-09-01   379.500000\n",
+      "1958-10-01   380.500000\n",
+      "1958-11-01   380.916667\n",
+      "1958-12-01   381.000000\n",
+      "1959-01-01   382.666667\n",
+      "1959-02-01   384.666667\n",
+      "1959-03-01   388.333333\n",
+      "1959-04-01   392.333333\n",
+      "1959-05-01   397.083333\n",
+      "1959-06-01   400.166667\n",
+      "1959-07-01   404.916667\n",
+      "1959-08-01   409.416667\n",
+      "1959-09-01   414.333333\n",
+      "1959-10-01   418.333333\n",
+      "1959-11-01   422.666667\n",
+      "1959-12-01   428.333333\n",
+      "1960-01-01   433.083333\n",
+      "1960-02-01   437.166667\n",
+      "1960-03-01   438.250000\n",
+      "1960-04-01   443.666667\n",
+      "1960-05-01   448.000000\n",
+      "1960-06-01   453.250000\n",
+      "1960-07-01   459.416667\n",
+      "1960-08-01   463.333333\n",
+      "1960-09-01   467.083333\n",
+      "1960-10-01   471.583333\n",
+      "1960-11-01   473.916667\n",
+      "1960-12-01   476.166667\n",
+      "\n",
+      "[144 rows x 1 columns]             #Passengers\n",
+      "Month                  \n",
+      "1949-01-01          NaN\n",
+      "1949-02-01          NaN\n",
+      "1949-03-01          NaN\n",
+      "1949-04-01          NaN\n",
+      "1949-05-01          NaN\n",
+      "1949-06-01          NaN\n",
+      "1949-07-01          NaN\n",
+      "1949-08-01          NaN\n",
+      "1949-09-01          NaN\n",
+      "1949-10-01          NaN\n",
+      "1949-11-01          NaN\n",
+      "1949-12-01    13.720147\n",
+      "1950-01-01    13.453342\n",
+      "1950-02-01    13.166475\n",
+      "1950-03-01    13.686977\n",
+      "1950-04-01    13.822467\n",
+      "1950-05-01    13.663710\n",
+      "1950-06-01    14.760718\n",
+      "1950-07-01    18.135016\n",
+      "1950-08-01    20.797727\n",
+      "1950-09-01    21.928949\n",
+      "1950-10-01    21.315807\n",
+      "1950-11-01    20.067311\n",
+      "1950-12-01    19.070841\n",
+      "1951-01-01    17.439940\n",
+      "1951-02-01    16.781122\n",
+      "1951-03-01    19.349066\n",
+      "1951-04-01    19.425655\n",
+      "1951-05-01    18.744696\n",
+      "1951-06-01    19.942911\n",
+      "...                 ...\n",
+      "1958-07-01    59.590013\n",
+      "1958-08-01    65.557054\n",
+      "1958-09-01    65.557054\n",
+      "1958-10-01    65.106207\n",
+      "1958-11-01    64.593074\n",
+      "1958-12-01    64.530472\n",
+      "1959-01-01    63.627229\n",
+      "1959-02-01    61.759553\n",
+      "1959-03-01    61.597422\n",
+      "1959-04-01    60.284678\n",
+      "1959-05-01    60.008270\n",
+      "1959-06-01    63.009138\n",
+      "1959-07-01    71.987951\n",
+      "1959-08-01    80.049369\n",
+      "1959-09-01    81.485451\n",
+      "1959-10-01    79.680422\n",
+      "1959-11-01    74.498729\n",
+      "1959-12-01    69.830097\n",
+      "1960-01-01    66.624399\n",
+      "1960-02-01    61.866180\n",
+      "1960-03-01    61.382741\n",
+      "1960-04-01    60.171472\n",
+      "1960-05-01    60.184565\n",
+      "1960-06-01    65.021849\n",
+      "1960-07-01    77.194510\n",
+      "1960-08-01    83.630500\n",
+      "1960-09-01    84.617276\n",
+      "1960-10-01    82.541954\n",
+      "1960-11-01    79.502382\n",
+      "1960-12-01    77.737125\n",
+      "\n",
+      "[144 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rolmean,rolstd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
