--- a/index.ipynb
+++ b/index.ipynb
@@ -488,7 +488,7 @@
    ],
    "source": [
     "from statsmodels.tsa.stattools import adfuller\n",
-    "\n",
+    "dftest = adfuller(raw)\n",
     "#Perform Dickey-Fuller test:\n",
     "\n",
     "# Extract and display test results in a user friendly manner\n",
