--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,7 @@
    ],
    "source": [
     "from statsmodels.tsa.stattools import adfuller\n",
-    "dftest = adfuller(raw)\n",
+    "dftest = adfuller(raw[])\n",
     "dfoutput = pd.Series(dftest[0:4], index=['Test Statistic','p-value','#Lags Used','Number of Observations Used'])\n",
     "for key,value in dftest[4].items():\n",
     "    dfoutput['Critical Value (%s)'%key] = value\n",
