--- a/index.ipynb
+++ b/index.ipynb
@@ -467,14 +467,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.8153688792060512, 0.991880243437641, 13, 130, {'1%': -3.4816817173418295, '5%': -2.8840418343195267, '10%': -2.578770059171598}, 996.692930839019)\n"
+      "Test Statistic                   0.815369\n",
+      "p-value                          0.991880\n",
+      "#Lags Used                      13.000000\n",
+      "Number of Observations Used    130.000000\n",
+      "Critical Value (1%)             -3.481682\n",
+      "Critical Value (5%)             -2.884042\n",
+      "Critical Value (10%)            -2.578770\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -484,7 +491,7 @@
     "dfoutput = pd.Series(dftest[0:4], index=['Test Statistic','p-value','#Lags Used','Number of Observations Used'])\n",
     "for key,value in dftest[4].items():\n",
     "    dfoutput['Critical Value (%s)'%key] = value\n",
-    "print(dftest)\n",
+    "print (dfoutput)\n",
     "#Perform Dickey-Fuller test:\n",
     "\n",
     "# Extract and display test results in a user friendly manner\n",
